# core-api/src/main/resources/static/docs/openapi3.yaml
@@ -7,6 +7,34 @@ servers:
 - url: http://localhost:8082/
 tags: []
 paths:
+  /api/v1/orders:
+    post:
+      tags:
+      - Order
+      summary: 주문 등록
+      description: 주문 등록 API
+      operationId: 주문 등록 - 성공
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateOrderRequest'
+            examples:
+              주문 등록 - 성공:
+                value: "{\n  \"productId\" : 1,\n  \"quantity\" : 1\n}"
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse<CreateOrderResult>'
+              examples:
+                주문 등록 - 성공:
+                  value: "{\n  \"result\" : \"SUCCESS\",\n  \"status\" : 200,\n  \"\
+                    data\" : {\n    \"orderKey\" : \"20260117153212345\"\n  },\n \
+                    \ \"error\" : null,\n  \"timestamp\" : \"2026-02-17T13:04:53.592462Z\"\
+                    \n}"
   /api/v1/products:
     post:
       tags:
@@ -21,9 +49,8 @@ paths:
               $ref: '#/components/schemas/CreateProductRequest'
             examples:
               상품 등록 - 성공:
-                value: "{\r\n  \"name\" : \"테스트 상품\",\r\n  \"description\" : \"테스트\
-                  \ 상품 설명\",\r\n  \"costPrice\" : 1000,\r\n  \"salesPrice\" : 1500\r\
-                  \n}"
+                value: "{\n  \"name\" : \"테스트 상품\",\n  \"description\" : \"테스트 상품\
+                  \ 설명\",\n  \"costPrice\" : 1000,\n  \"salesPrice\" : 1500\n}"
       responses:
         "200":
           description: "200"
@@ -33,12 +60,12 @@ paths:
                 $ref: '#/components/schemas/ApiResponse<CreateProductResult>'
               examples:
                 상품 등록 - 성공:
-                  value: "{\r\n  \"result\" : \"SUCCESS\",\r\n  \"status\" : 200,\r\
-                    \n  \"data\" : {\r\n    \"productId\" : 1,\r\n    \"name\" : \"\
-                    테스트 상품\",\r\n    \"description\" : \"테스트 상품 설명\",\r\n    \"costPrice\"\
-                    \ : 1000,\r\n    \"salesPrice\" : 1500,\r\n    \"status\" : \"\
-                    ACTIVE\"\r\n  },\r\n  \"error\" : null,\r\n  \"timestamp\" : \"\
-                    2025-12-02T02:54:38.402150800Z\"\r\n}"
+                  value: "{\n  \"result\" : \"SUCCESS\",\n  \"status\" : 200,\n  \"\
+                    data\" : {\n    \"productId\" : 1,\n    \"name\" : \"테스트 상품\"\
+                    ,\n    \"description\" : \"테스트 상품 설명\",\n    \"costPrice\" : 1000,\n\
+                    \    \"salesPrice\" : 1500,\n    \"status\" : \"ACTIVE\"\n  },\n\
+                    \  \"error\" : null,\n  \"timestamp\" : \"2026-02-17T13:04:53.638005Z\"\
+                    \n}"
   /api/v1/accounts/me:
     get:
       tags:
@@ -63,10 +90,10 @@ paths:
                 $ref: '#/components/schemas/ApiResponse<AccountInfo>'
               examples:
                 내 계정 정보 조회 - 성공:
-                  value: "{\r\n  \"result\" : \"SUCCESS\",\r\n  \"status\" : 200,\r\
-                    \n  \"data\" : {\r\n    \"id\" : 1,\r\n    \"email\" : \"test@ecommerce.com\"\
-                    ,\r\n    \"name\" : \"testUser\"\r\n  },\r\n  \"error\" : null,\r\
-                    \n  \"timestamp\" : \"2025-12-02T02:54:34.090174700Z\"\r\n}"
+                  value: "{\n  \"result\" : \"SUCCESS\",\n  \"status\" : 200,\n  \"\
+                    data\" : {\n    \"id\" : 1,\n    \"email\" : \"test@ecommerce.com\"\
+                    ,\n    \"name\" : \"testUser\"\n  },\n  \"error\" : null,\n  \"\
+                    timestamp\" : \"2026-02-17T13:04:53.225781Z\"\n}"
   /api/v1/accounts/signup:
     post:
       tags:
@@ -80,28 +107,16 @@ paths:
             schema:
               $ref: '#/components/schemas/SignupRequest'
             examples:
-              회원가입 - 성공:
-                value: "{\r\n  \"email\" : \"test@test.com\",\r\n  \"password\" :\
-                  \ \"test1234\",\r\n  \"name\" : \"testUser\"\r\n}"
               회원가입 - 실패 - 이미 사용 중인 이메일:
-                value: "{\r\n  \"email\" : \"existsEmail@ecommerce.com\",\r\n  \"\
-                  password\" : \"password1234\",\r\n  \"name\" : \"testUser\"\r\n}"
+                value: "{\n  \"email\" : \"existsEmail@ecommerce.com\",\n  \"password\"\
+                  \ : \"password1234\",\n  \"name\" : \"testUser\"\n}"
+              회원가입 - 성공:
+                value: "{\n  \"email\" : \"test@test.com\",\n  \"password\" : \"test1234\"\
+                  ,\n  \"name\" : \"testUser\"\n}"
               회원가입 - 실패 - 잘못된 입력값:
-                value: "{\r\n  \"email\" : \"invalid-email-format\",\r\n  \"password\"\
-                  \ : \"password1234\",\r\n  \"name\" : \"testUser\"\r\n}"
+                value: "{\n  \"email\" : \"invalid-email-format\",\n  \"password\"\
+                  \ : \"password1234\",\n  \"name\" : \"testUser\"\n}"
       responses:
-        "200":
-          description: "200"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiResponse<SignupResult>'
-              examples:
-                회원가입 - 성공:
-                  value: "{\r\n  \"result\" : \"SUCCESS\",\r\n  \"status\" : 200,\r\
-                    \n  \"data\" : {\r\n    \"email\" : \"test@test.com\",\r\n   \
-                    \ \"name\" : \"testUser\"\r\n  },\r\n  \"error\" : null,\r\n \
-                    \ \"timestamp\" : \"2025-12-02T02:54:37.523681Z\"\r\n}"
         "400":
           description: "400"
           content:
@@ -110,15 +125,27 @@ paths:
                 $ref: '#/components/schemas/ApiResponse<Unit>'
               examples:
                 회원가입 - 실패 - 이미 사용 중인 이메일:
-                  value: "{\r\n  \"result\" : \"ERROR\",\r\n  \"status\" : 400,\r\n\
-                    \  \"data\" : null,\r\n  \"error\" : {\r\n    \"message\" : \"\
-                    이미 사용 중인 이메일입니다.\",\r\n    \"data\" : null\r\n  },\r\n  \"timestamp\"\
-                    \ : \"2025-12-02T02:54:37.403772600Z\"\r\n}"
+                  value: "{\n  \"result\" : \"ERROR\",\n  \"status\" : 400,\n  \"\
+                    data\" : null,\n  \"error\" : {\n    \"message\" : \"이미 사용 중인\
+                    \ 이메일입니다.\",\n    \"data\" : null\n  },\n  \"timestamp\" : \"\
+                    2026-02-17T13:04:53.462026Z\"\n}"
                 회원가입 - 실패 - 잘못된 입력값:
-                  value: "{\r\n  \"result\" : \"ERROR\",\r\n  \"status\" : 400,\r\n\
-                    \  \"data\" : null,\r\n  \"error\" : {\r\n    \"message\" : \"\
-                    입력 값이 유효하지 않습니다.\",\r\n    \"data\" : null\r\n  },\r\n  \"timestamp\"\
-                    \ : \"2025-12-02T02:54:37.273567600Z\"\r\n}"
+                  value: "{\n  \"result\" : \"ERROR\",\n  \"status\" : 400,\n  \"\
+                    data\" : null,\n  \"error\" : {\n    \"message\" : \"입력 값이 유효하\
+                    지 않습니다.\",\n    \"data\" : null\n  },\n  \"timestamp\" : \"2026-02-17T13:04:53.446596Z\"\
+                    \n}"
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse<SignupResult>'
+              examples:
+                회원가입 - 성공:
+                  value: "{\n  \"result\" : \"SUCCESS\",\n  \"status\" : 200,\n  \"\
+                    data\" : {\n    \"email\" : \"test@test.com\",\n    \"name\" :\
+                    \ \"testUser\"\n  },\n  \"error\" : null,\n  \"timestamp\" : \"\
+                    2026-02-17T13:04:53.474528Z\"\n}"
   /api/v1/auth/login:
     post:
       tags:
@@ -132,29 +159,16 @@ paths:
             schema:
               $ref: '#/components/schemas/LoginRequest'
             examples:
-              로그인 - 성공:
-                value: "{\r\n  \"email\" : \"test@ecommerce.com\",\r\n  \"password\"\
-                  \ : \"testpassword\"\r\n}"
               로그인 - 실패 - 비밀번호 불일치:
-                value: "{\r\n  \"email\" : \"test@ecommerce.com\",\r\n  \"password\"\
-                  \ : \"testpassword\"\r\n}"
+                value: "{\n  \"email\" : \"test@ecommerce.com\",\n  \"password\" :\
+                  \ \"testpassword\"\n}"
               로그인 - 실패 - 존재하지 않는 계정:
-                value: "{\r\n  \"email\" : \"test@ecommerce.com\",\r\n  \"password\"\
-                  \ : \"testpassword\"\r\n}"
+                value: "{\n  \"email\" : \"test@ecommerce.com\",\n  \"password\" :\
+                  \ \"testpassword\"\n}"
+              로그인 - 성공:
+                value: "{\n  \"email\" : \"test@ecommerce.com\",\n  \"password\" :\
+                  \ \"testpassword\"\n}"
       responses:
-        "200":
-          description: "200"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiResponse<LoginResult>'
-              examples:
-                로그인 - 성공:
-                  value: "{\r\n  \"result\" : \"SUCCESS\",\r\n  \"status\" : 200,\r\
-                    \n  \"data\" : {\r\n    \"id\" : 1,\r\n    \"email\" : \"test@ecommerce.com\"\
-                    ,\r\n    \"name\" : \"testUser\",\r\n    \"accessToken\" : \"\
-                    thisistesttoken\"\r\n  },\r\n  \"error\" : null,\r\n  \"timestamp\"\
-                    \ : \"2025-12-02T02:54:37.890677700Z\"\r\n}"
         "400":
           description: "400"
           content:
@@ -163,10 +177,10 @@ paths:
                 $ref: '#/components/schemas/ApiResponse<Unit>'
               examples:
                 로그인 - 실패 - 비밀번호 불일치:
-                  value: "{\r\n  \"result\" : \"ERROR\",\r\n  \"status\" : 400,\r\n\
-                    \  \"data\" : null,\r\n  \"error\" : {\r\n    \"message\" : \"\
-                    비밀번호가 일치하지 않습니다.\",\r\n    \"data\" : null\r\n  },\r\n  \"timestamp\"\
-                    \ : \"2025-12-02T02:54:38.004677Z\"\r\n}"
+                  value: "{\n  \"result\" : \"ERROR\",\n  \"status\" : 400,\n  \"\
+                    data\" : null,\n  \"error\" : {\n    \"message\" : \"비밀번호가 일치하\
+                    지 않습니다.\",\n    \"data\" : null\n  },\n  \"timestamp\" : \"2026-02-17T13:04:53.538524Z\"\
+                    \n}"
         "404":
           description: "404"
           content:
@@ -175,12 +189,53 @@ paths:
                 $ref: '#/components/schemas/ApiResponse<Unit>'
               examples:
                 로그인 - 실패 - 존재하지 않는 계정:
-                  value: "{\r\n  \"result\" : \"ERROR\",\r\n  \"status\" : 404,\r\n\
-                    \  \"data\" : null,\r\n  \"error\" : {\r\n    \"message\" : \"\
-                    존재하지 않는 계정입니다.\",\r\n    \"data\" : null\r\n  },\r\n  \"timestamp\"\
-                    \ : \"2025-12-02T02:54:38.098680Z\"\r\n}"
+                  value: "{\n  \"result\" : \"ERROR\",\n  \"status\" : 404,\n  \"\
+                    data\" : null,\n  \"error\" : {\n    \"message\" : \"존재하지 않는 계\
+                    정입니다.\",\n    \"data\" : null\n  },\n  \"timestamp\" : \"2026-02-17T13:04:53.550979Z\"\
+                    \n}"
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse<LoginResult>'
+              examples:
+                로그인 - 성공:
+                  value: "{\n  \"result\" : \"SUCCESS\",\n  \"status\" : 200,\n  \"\
+                    data\" : {\n    \"id\" : 1,\n    \"email\" : \"test@ecommerce.com\"\
+                    ,\n    \"name\" : \"testUser\",\n    \"accessToken\" : \"thisistesttoken\"\
+                    \n  },\n  \"error\" : null,\n  \"timestamp\" : \"2026-02-17T13:04:53.523965Z\"\
+                    \n}"
 components:
   schemas:
+    ApiResponse<CreateOrderResult>:
+      title: ApiResponse<CreateOrderResult>
+      required:
+      - data
+      - error
+      - result
+      - status
+      - timestamp
+      type: object
+      properties:
+        result:
+          type: string
+          description: 요청 결과 (SUCCESS/ERROR)
+        data:
+          required:
+          - orderKey
+          type: object
+          properties:
+            orderKey:
+              type: string
+              description: 주문키
+          description: 응답 데이터
+        timestamp:
+          type: string
+          description: 응답 생성 시간
+        status:
+          type: number
+          description: HTTP 상태 코드
     LoginRequest:
       title: LoginRequest
       required:
@@ -226,34 +281,6 @@ components:
         status:
           type: number
           description: HTTP 상태 코드
-    ApiResponse<Unit>:
-      title: ApiResponse<Unit>
-      required:
-      - data
-      - error
-      - result
-      - status
-      - timestamp
-      type: object
-      properties:
-        result:
-          type: string
-          description: 요청 결과 (SUCCESS/ERROR)
-        error:
-          required:
-          - message
-          type: object
-          properties:
-            message:
-              type: string
-              description: 오류 메시지
-          description: 오류 정보
-        timestamp:
-          type: string
-          description: 응답 생성 시간
-        status:
-          type: number
-          description: HTTP 상태 코드
     ApiResponse<AccountInfo>:
       title: ApiResponse<AccountInfo>
       required:
@@ -284,6 +311,34 @@ components:
               type: string
               description: 계정 이메일
           description: 응답 데이터
+        timestamp:
+          type: string
+          description: 응답 생성 시간
+        status:
+          type: number
+          description: HTTP 상태 코드
+    ApiResponse<Unit>:
+      title: ApiResponse<Unit>
+      required:
+      - data
+      - error
+      - result
+      - status
+      - timestamp
+      type: object
+      properties:
+        result:
+          type: string
+          description: 요청 결과 (SUCCESS/ERROR)
+        error:
+          required:
+          - message
+          type: object
+          properties:
+            message:
+              type: string
+              description: 오류 메시지
+          description: 오류 정보
         timestamp:
           type: string
           description: 응답 생성 시간
@@ -351,6 +406,19 @@ components:
         status:
           type: number
           description: HTTP 상태 코드
+    CreateOrderRequest:
+      title: CreateOrderRequest
+      required:
+      - productId
+      - quantity
+      type: object
+      properties:
+        quantity:
+          type: number
+          description: 상품 수량
+        productId:
+          type: number
+          description: 상품 ID
     ApiResponse<CreateProductResult>:
       title: ApiResponse<CreateProductResult>
       required:
